@@ -10,8 +10,8 @@ Package: libbde
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Library to support the BitLocker Drive Encryption (BDE) format
- libbde is a library to support the BitLocker Drive Encryption (BDE) format
+Description: Library to access the BitLocker Drive Encryption (BDE) format
+ libbde is a library to access the BitLocker Drive Encryption (BDE) format
 
 Package: libbde-dev
 Section: libdevel
