@@ -1,5 +1,5 @@
 /*
- * Library to support the BitLocker Drive Encryption (BVE) format
+ * Library to access the BitLocker Drive Encryption (BVE) format
  *
  * Copyright (C) 2011-2013, Joachim Metz <joachim.metz@gmail.com>
  *
