@@ -10,7 +10,7 @@
 \deftab720
 \pard\pardeftab720\sl320\sa260
 
-\f0\fs26 \cf0 \cb2 Libbde is a library to support the BitLocker Drive Encryption (BDE) format.\
+\f0\fs26 \cf0 \cb2 Libbde is a library to access the BitLocker Drive Encryption (BDE) format.\
 The libbde package contains the following tools:\
 \pard\tx220\tx720\pardeftab720\li720\fi-720\sa60
 \ls4\ilvl0\cf0 {\listtext	\'95	}bdeinfo; which shows the metadata of EVT files.\
