@@ -1,9 +1,9 @@
-.Dd January 13, 2013
+.Dd March 31, 2013
 .Dt libbde 3
 .Os libbde
 .Sh NAME
 .Nm libbde.h
-.Nd Library to support the BitLocker Drive Encryption (BDE) format
+.Nd Library to access the BitLocker Drive Encryption (BDE) format
 .Sh LIBRARY
 .Lb libbde
 .Sh SYNOPSIS
@@ -136,7 +136,7 @@ http://code.google.com/p/libbde/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
-Copyright 2011-2013 Joachim Metz <joachim.metz@gmail.com>.
+Copyright 2011-2013, Joachim Metz <joachim.metz@gmail.com>.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
 the libbde.h include file
